--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 python-telegram-bot[job-queue]==21.7
 supabase==2.15.0
 python-dotenv==1.0.0
-httpx==0.26.0
+httpx>=0.27,<0.28  # Updated to match python-telegram-bot requirement
