--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,34 @@
-# Environment variables - Contains secrets, should NEVER be committed.
+# Dependencies
+node_modules/
+.pnp/
+.pnp.js
+
+# Env files (DO NOT COMMIT SECRETS)
 .env
+.env.local
+.env.*
+!.env.example
 
-# Python artifacts
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Virtual Environments
-venv/
-.venv/
+# Build output
+dist/
+build/
+coverage/
 
-# IDE configuration
+# OS files
+.DS_Store
+Thumbs.db
+
+# Editor/IDE
 .vscode/
 .idea/
+*.swp
+
+# Misc
+*.tgz
